--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav {
     transform: translateY(-50%);
 }
 
-.resource-button {
+.resource-button, .toggle-button {
     background-color: transparent;
     color: #eeea05;
     padding: 0.5rem 1rem;
@@ -48,7 +48,7 @@ nav {
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.resource-button:hover {
+.resource-button:hover, .toggle-button:hover {
     background-color: #eeea05;
     color: #5f016b;
 }
@@ -71,6 +71,7 @@ main {
 
 .comments {
     margin-top: 1rem;
+    display: none; /* Hide comments initially */
 }
 
 .comment {
@@ -123,26 +124,4 @@ main {
     nav {
         right: 0.5rem;
     }
-}
-
-/* Styles for the toggle button */
-.toggle-button {
-    display: inline-block;
-    padding: 8px 16px;
-    margin: 10px 0;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #eeea05;
-    
-    border: none;
-    border-radius: 5px;
-}
-
-.toggle-button:hover {
-    background-color: red;
-}
-
-/* Hide comments initially */
-.comments {
-    display: none;
 }
